first part of landing page done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,36 @@
     <link rel="stylesheet" href="styles/index.css">
     <!-- Font Awesome 4 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="landing">
+        <img class="landing-img" src="img/landing.png" alt="">
+
+        <div class="landing-content">
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+                <a href="#" class="contact-btn btn">Contact Us</a>
+            </div>
+
+            <div class="ad">
+                <h1>Distinguish <br>your home</h1>
+                <p>Quality doors for every style and budget</p>
+                <a class="contact-btn btn" href="#">Get in touch</a>
+            </div>
+
+            <div class="social">
+                <ul>
+                    <li class="fa fa-phone"><a href="+234 818 493 5721" target="_blank">&nbsp;&nbsp;&nbsp;+234 818 493 5721</a></li>
+                    <li class="fa fa-envelope"><a href="#">&nbsp;&nbsp;&nbsp;sedekdoors@gmail.com</a></li>
+                    <li class="fa fa-map-marker"><a href="https://maps.app.goo.gl/g4WLXSNnAXvjMzAb9" target="_blank">&nbsp;&nbsp;&nbsp;Plot 262A, 4th Avenue, State Housing Estate,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Calabar, Cross River State. </a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     
 
 
