--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     
     <footer>
         <div class="footer">
-            <ul>
-                <li class="fa fa-phone"><a href="+234 818 493 5721" target="_blank">&nbsp;&nbsp;&nbsp;+234 818 493 5721</a></li>
-                <li class="fa fa-envelope"><a href="#">&nbsp;&nbsp;&nbsp;sedekdoors@gmail.com</a></li>
-                <li class="fa fa-map-marker"><a href="https://maps.app.goo.gl/g4WLXSNnAXvjMzAb9" target="_blank">&nbsp;&nbsp;&nbsp;Plot 262A, 4th Avenue, State Housing Estate,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Calabar, Cross River State. </a></li>
+            <ul style="text-align: right;">
+                <li><a href="+234 818 493 5721" target="_blank">+234 818 493 5721</a></li>
+                <li><a href="#">sedekdoors@gmail.com</a></li>
+                <li><a href="https://maps.app.goo.gl/g4WLXSNnAXvjMzAb9" target="_blank">State Housing Estate 540281,<br>Calabar, Cross River State. </a></li>
             </ul>
     
             <img src="img/logo.png" alt="">
@@ -98,7 +98,7 @@
             </ul>
         </div>
 
-        Copyright &#169; Sedek Doors & Cabinets
+        <p style="text-align: center;">Copyright &copy; Sedek Doors & Cabinets</p>
     </footer>
 
     <script src="js/script.js"></script>
