--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </ul>
         </div>
 
-        <p style="text-align: center;">Copyright &copy; Sedek Doors & Cabinets</p>
+        <p style="text-align: center;">&nbsp;&nbsp;&nbsp;Copyright &copy; Sedek Doors & Cabinets</p>
     </footer>
 
     <script src="js/script.js"></script>
