--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="touch">
         <div class="container">
             <div class="address">
-                <div>
+                <div class="title">
                     <h2>Get in touch</h2>
                     <p>Leave us a message</p>
                 </div>
@@ -105,8 +105,14 @@
     
     
             <form action="" method="post">
-                <input type="text">
-                <textarea name="" id=""></textarea>
+                <div>
+                    <label for="email">Email Address:</label>
+                    <input type="text" name="email">
+                </div>
+                <div>
+                    <label for="message">Message:</label>
+                    <textarea name="message" id=""></textarea>
+                </div>
                 <a href="" class="btn brown-btn">Send Message</a>
             </form>
         </div>
