working on modal

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="landing-content">
             <div class="logo">
                 <img src="img/logo.png" alt="">
-                <a href="#" class="brown-btn btn">Contact Us</a>
+                <p class="brown-btn btn">Contact Us</p>
             </div>
 
             <div class="ad">
@@ -42,12 +42,37 @@
     </div>
 
     <div class="container">
+        <div id="double_door" class="modal">
+            <span class="fa fa-close" id="double_close"></span>
+            <div class="image">
+                <div>
+                    <!--<img src="img/double_door_1.jpeg" alt="">-->
+                </div>
+                <div>
+                    <!--<img src="img/double_door_2.png" alt="">-->
+                </div>
+            </div>
+        </div>
+
+        <div id="glass_insert" class="modal">
+            <div>
+                <span class="fa fa-close" id="glass_close"></span>
+            </div>
+        </div>
+
+        <div id="planate_door" class="modal">
+            <div>
+                <span class="fa fa-close" id="planate_close"></span>
+            </div>
+        </div>
+
+
         <div class="shop">
             <div class="left">
                 <h2>Double Doors</h2>
                 <p>Double doors, often used in grand entrances, combine functionality and aesthetics with a wider passage for moving large items. Popular in residential, commercial, and historic buildings, they enhance visual appeal, accessibility, and airflow. Available in various designs and materials, double doors can be customized to match any architectural style, adding elegance and practicality to any entrance.</p>
 
-                <a href="#" class="btn white-btn">Explore Options</a>
+                <a class="btn white-btn" id="double_door_btn">Explore Options</a>
             </div>
 
             <div class="right">
@@ -60,7 +85,7 @@
                 <h2>Glass Insert Doors</h2>
                 <p>Glass insert doors add sophistication, style, and elegance to any space. They brighten interiors by allowing natural light in, creating a spacious and open feel. With various glass types and designs available, you can balance privacy and aesthetics to suit your needs, whether you choose frosted glass for privacy or clear glass for a scenic view.</p>
 
-                <a href="#" class="btn white-btn">Explore Options</a>
+                <p class="btn white-btn" id="glass_insert_btn">Explore Options</p>
             </div>
 
             <div class="right">
@@ -73,7 +98,7 @@
                 <h2>Planate Flush Doors</h2>
                 <p>Flush doors, favored in modern architecture for their sleek look, are made from materials like plywood or MDF. They offer durability, sound insulation, and customization options. These doors can be fire-rated and equipped with smart features, blending functionality with modern elegance. Suitable for residential and commercial use, flush doors provide a stylish, practical solution for contemporary interiors.</p>
 
-                <a href="#" class="btn white-btn">Explore Options</a>
+                <p class="btn white-btn" id="planate_door_btn">Explore Options</p>
             </div>
 
             <div class="right">
