working on modal

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
 
     <div class="container">
         <div id="double_door" class="modal">
-            <span class="fa fa-close" id="double_close"></span>
-            <div class="image">
+            <div class="modal_header">
+                <h3>Double Doors</h3>
+                <h3 class="fa fa-close" id="double_close"></h3>
+            </div>
+
+            <div class="modal_images">
                 <div>
                     <!--<img src="img/double_door_1.jpeg" alt="">-->
                 </div>
@@ -55,15 +59,18 @@
         </div>
 
         <div id="glass_insert" class="modal">
-            <div>
-                <span class="fa fa-close" id="glass_close"></span>
+            <div class="modal_header">
+                <h3>Glass Insert Doors</h3>
+                <h3 class="fa fa-close" id="glass_close"></h3>
             </div>
         </div>
 
         <div id="planate_door" class="modal">
-            <div>
-                <span class="fa fa-close" id="planate_close"></span>
+            <div class="modal_header">
+                <h3>Planate Flush Doors</h3>
+                <h3 class="fa fa-close" id="planate_close"></h3>
             </div>
+
         </div>
 
 
