started the mobile view reponsive work, just uploading to confirm progress

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- LINKS -->
     <!-- External Style Sheet -->
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/mobile_view_styles.css">
     <!-- Font Awesome 4 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
@@ -15,23 +16,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="landing">
-        <img class="landing-img" src="img/landing.png" alt="">
 
-        <div class="landing-content">
+<body>
+    <!-- HERO -->
+    <div class="hero-section">
+        <img class="hero-image" src="img/landing.png" alt="">
+
+        <div class="hero-content">
             <div class="logo">
                 <img src="img/logo.png" alt="">
                 <p class="brown-btn btn">Contact Us</p>
             </div>
 
-            <div class="ad">
+            <div class="headline">
                 <h1>Distinguish <br>your home</h1>
                 <p>Quality doors for every style and budget</p>
                 <a class="brown-btn btn" href="#">Get in touch</a>
             </div>
 
-            <div class="social">
+            <div class="contact-info">
                 <ul>
                     <li class="fa fa-phone"><a href="+234 818 493 5721" target="_blank">&nbsp;&nbsp;&nbsp;+234 818 493 5721</a></li>
                     <li class="fa fa-envelope"><a href="#">&nbsp;&nbsp;&nbsp;sedekdoors@gmail.com</a></li>
@@ -41,6 +44,7 @@
         </div>
     </div>
 
+    <!-- PRODUCTS SECTION -->
     <div class="container">
         <div id="double_door" class="modal">
             <div class="modal_header">
@@ -54,6 +58,9 @@
                 </div>
                 <div>
                     <!--<img src="img/double_door_2.png" alt="">-->
+                </div>
+                <div>
+
                 </div>
             </div>
         </div>
