mobile, working on get-in-touch section

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     </div>
 
     <!-- PRODUCTS SECTION -->
-    <div class="container">
-        <div id="double_door" class="modal">
-            <div class="modal_header">
+    <div class="products-section">
+        <div id="modal-double-door" class="modal">
+            <div class="modal-header">
                 <h3>Double Doors</h3>
-                <h3 class="fa fa-close" id="double_close"></h3>
+                <h3 class="fa fa-close" id="close-double-door"></h3>
             </div>
 
-            <div class="modal_images">
+            <div class="modal-images">
                 <div>
                     <!--<img src="img/double_door_1.jpeg" alt="">-->
                 </div>
@@ -65,75 +65,77 @@
             </div>
         </div>
 
-        <div id="glass_insert" class="modal">
-            <div class="modal_header">
+        <div id="modal-glass-insert" class="modal">
+            <div class="modal-header">
                 <h3>Glass Insert Doors</h3>
-                <h3 class="fa fa-close" id="glass_close"></h3>
+                <h3 class="fa fa-close" id="close-glass-insert"></h3>
             </div>
         </div>
 
-        <div id="planate_door" class="modal">
+        <div id="modal-planate-door" class="modal">
             <div class="modal_header">
                 <h3>Planate Flush Doors</h3>
-                <h3 class="fa fa-close" id="planate_close"></h3>
+                <h3 class="fa fa-close" id="close-planate-door"></h3>
             </div>
 
         </div>
 
 
-        <div class="shop">
-            <div class="left">
+        <div class="products">
+            <div class="product-description">
                 <h2>Double Doors</h2>
                 <p>Double doors, often used in grand entrances, combine functionality and aesthetics with a wider passage for moving large items. Popular in residential, commercial, and historic buildings, they enhance visual appeal, accessibility, and airflow. Available in various designs and materials, double doors can be customized to match any architectural style, adding elegance and practicality to any entrance.</p>
 
                 <a class="btn white-btn" id="double_door_btn">Explore Options</a>
             </div>
 
-            <div class="right">
+            <div class="product-image">
                 <img src="img/double_door.jpeg" alt="">
             </div>
         </div>
 
-        <div class="shop">
-            <div class="left">
+        <div class="products">
+            <div class="product-description">
                 <h2>Glass Insert Doors</h2>
                 <p>Glass insert doors add sophistication, style, and elegance to any space. They brighten interiors by allowing natural light in, creating a spacious and open feel. With various glass types and designs available, you can balance privacy and aesthetics to suit your needs, whether you choose frosted glass for privacy or clear glass for a scenic view.</p>
 
                 <p class="btn white-btn" id="glass_insert_btn">Explore Options</p>
             </div>
 
-            <div class="right">
+            <div class="product-image">
                 <img src="img/glass_insert.jpeg" alt="">
             </div>
         </div>
 
-        <div class="shop">
-            <div class="left">
+        <div class="products">
+            <div class="product-description">
                 <h2>Planate Flush Doors</h2>
                 <p>Flush doors, favored in modern architecture for their sleek look, are made from materials like plywood or MDF. They offer durability, sound insulation, and customization options. These doors can be fire-rated and equipped with smart features, blending functionality with modern elegance. Suitable for residential and commercial use, flush doors provide a stylish, practical solution for contemporary interiors.</p>
 
                 <p class="btn white-btn" id="planate_door_btn">Explore Options</p>
             </div>
 
-            <div class="right">
+            <div class="product-image">
                 <img src="img/planate_door.png" alt="">
             </div>
         </div>
     </div>
 
+    <!-- GALLERY -->
     <div class="gallery">
 
     </div>
 
-    <div class="touch">
+    <!-- GET IN TOUCH -->
+    <div class="contact-section">
         <div class="container">
-            <div class="address">
-                <div class="title">
+            <div class="address-container">
+                <div class="contact-title">
                     <h2>Get in touch</h2>
                     <p>Leave us a message</p>
                 </div>
     
-                <div class="social">
+                <div class="contact-info">
                     <ul>
                         <li class="fa fa-phone"><a href="+234 818 493 5721" target="_blank">&nbsp;&nbsp;&nbsp;+234 818 493 5721</a></li>
                         <li class="fa fa-envelope"><a href="#">&nbsp;&nbsp;&nbsp;sedekdoors@gmail.com</a></li>
