--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
 
             <div class="modal-images">
                 <div>
-                    <!--<img src="img/double_door_1.jpeg" alt="">-->
+                    <img src="img/double_door_1.jpeg" alt="">
                 </div>
                 <div>
-                    <!--<img src="img/double_door_2.png" alt="">-->
+                    <img src="img/double_door_2.png" alt="">
                 </div>
                 <div>
-
+                    <img src="img/double_door.jpeg" alt="">
                 </div>
             </div>
         </div>
 
-        <div id="modal-glass-insert" class="modal">
+        <!--<div id="modal-glass-insert" class="modal">
             <div class="modal-header">
                 <h3>Glass Insert Doors</h3>
                 <h3 class="fa fa-close" id="close-glass-insert"></h3>
@@ -77,8 +77,7 @@
                 <h3>Planate Flush Doors</h3>
                 <h3 class="fa fa-close" id="close-planate-door"></h3>
             </div>
-
-        </div>
+        </div>-->
 
 
         <div class="products">
