slideshow done, on both mobile and desktop

--- a/index.html
+++ b/index.html
@@ -53,31 +53,55 @@
             </div>
 
             <div class="modal-images">
-                <div>
+                <div class="doubleSlides fade">
                     <img src="img/double_door_1.jpeg" alt="">
                 </div>
-                <div>
+                <div class="doubleSlides fade">
                     <img src="img/double_door_2.png" alt="">
                 </div>
-                <div>
+                <div class="doubleSlides fade">
                     <img src="img/double_door.jpeg" alt="">
                 </div>
             </div>
         </div>
 
-        <!--<div id="modal-glass-insert" class="modal">
+        <div id="modal-glass-insert" class="modal">
             <div class="modal-header">
                 <h3>Glass Insert Doors</h3>
                 <h3 class="fa fa-close" id="close-glass-insert"></h3>
             </div>
+
+            <div class="modal-images">
+                <div class="glassSlides fade">
+                    <img src="img/double_door_1.jpeg" alt="">
+                </div>
+                <div class="glassSlides fade">
+                    <img src="img/double_door_2.png" alt="">
+                </div>
+                <div class="glassSlides fade">
+                    <img src="img/double_door.jpeg" alt="">
+                </div>
+            </div>
         </div>
 
         <div id="modal-planate-door" class="modal">
-            <div class="modal_header">
+            <div class="modal-header">
                 <h3>Planate Flush Doors</h3>
                 <h3 class="fa fa-close" id="close-planate-door"></h3>
             </div>
-        </div>-->
+
+            <div class="modal-images">
+                <div class="planateSlides fade">
+                    <img src="img/double_door_1.jpeg" alt="">
+                </div>
+                <div class="planateSlides fade">
+                    <img src="img/double_door_2.png" alt="">
+                </div>
+                <div class="planateSlides fade">
+                    <img src="img/double_door.jpeg" alt="">
+                </div>
+            </div>
+        </div>
 
 
         <div class="products">
