activated SlideShow for all options and changed the popup in mobile to cover the whole screen

--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
 
             <div class="modal-images">
                 <div class="glassSlides fade">
-                    <img src="img/double_door_1.jpeg" alt="">
+                    <img src="img/glass_insert.jpeg" alt="">
                 </div>
                 <div class="glassSlides fade">
-                    <img src="img/double_door_2.png" alt="">
+                    <img src="img/glass_insert_1.png" alt="">
                 </div>
                 <div class="glassSlides fade">
-                    <img src="img/double_door.jpeg" alt="">
+                    <img src="img/glass_insert_2.png" alt="">
+                </div>
+                <div class="glassSlides fade">
+                    <img src="img/glass_insert_3.png" alt="">
                 </div>
             </div>
         </div>
@@ -92,13 +95,19 @@
 
             <div class="modal-images">
                 <div class="planateSlides fade">
-                    <img src="img/double_door_1.jpeg" alt="">
+                    <img src="img/planate_1.png" alt="">
                 </div>
                 <div class="planateSlides fade">
-                    <img src="img/double_door_2.png" alt="">
+                    <img src="img/planate_2.png" alt="">
                 </div>
                 <div class="planateSlides fade">
-                    <img src="img/double_door.jpeg" alt="">
+                    <img src="img/planate_3.png" alt="">
+                </div>
+                <div class="planateSlides fade">
+                    <img src="img/planate_4.png" alt="">
+                </div>
+                <div class="planateSlides fade">
+                    <img src="img/planate_door.png" alt="">
                 </div>
             </div>
         </div>
