with many thanks to Paul, hero fixed and molded panel doors added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 <body>
     <!-- HERO -->
     <div class="hero-section">
-        <img class="hero-image" src="img/landing.png" alt="">
-
         <div class="hero-content">
             <div class="logo">
                 <img src="img/logo.png" alt="">
@@ -46,6 +44,46 @@
 
     <!-- PRODUCTS SECTION -->
     <div class="products-section">
+        <div id="modal-molded-door" class="modal">
+            <div class="modal-header">
+                <h3>Molded Panel Doors</h3>
+                <h3 class="fa fa-close" id="close-molded-door"></h3>
+            </div>
+
+            <div class="modal-images">
+                <div class="moldedSlides fade">
+                    <img src="img/molded_3.png" alt="">
+                </div>
+                <div class="moldedSlides fade">
+                    <img src="img/molded_2.png" alt="">
+                </div>
+                <div class="moldedSlides fade">
+                    <img src="img/molded_1.png" alt="">
+                </div>
+                <div class="moldedSlidess fade">
+                    <img src="img/molded_4.png" alt="">
+                </div>
+                <div class="moldedSlides fade">
+                    <img src="img/molded_5.png" alt="">
+                </div>
+                <div class="moldedSlides fade">
+                    <img src="img/molded_6.png" alt="">
+                </div>
+                <div class="moldedSlides fade">
+                    <img src="img/molded_7.png" alt="">
+                </div>
+                <div class="moldedSlidess fade">
+                    <img src="img/molded_8.png" alt="">
+                </div>
+                <div class="moldedSlides fade">
+                    <img src="img/molded_9.png" alt="">
+                </div>
+                <div class="moldedSlidess fade">
+                    <img src="img/molded_10.png" alt="">
+                </div>
+            </div>
+        </div>
+
         <div id="modal-double-door" class="modal">
             <div class="modal-header">
                 <h3>Double Doors</h3>
@@ -112,6 +150,19 @@
             </div>
         </div>
 
+
+        <div class="products">
+            <div class="product-description">
+                <h2>Molded Panel Doors</h2>
+                <p>Molded panel doors, made from durable materials like MDF or hardboard, offer a versatile and cost-effective solution for residential and commercial spaces. Available in traditional and modern designs, these doors provide sound insulation, privacy, and security with solid cores. Affordable and customizable with various styles and finishes, they are a practical and aesthetically pleasing choice for any interior.</p>
+
+                <p class="btn white-btn" id="molded_door_btn">Explore Options</p>
+            </div>
+
+            <div class="product-image">
+                <img src="img/molded_1.png" alt="">
+            </div>
+        </div>
 
         <div class="products">
             <div class="product-description">
