--- a/index.html
+++ b/index.html
@@ -23,7 +23,50 @@
         <div class="hero-content">
             <div class="logo">
                 <img src="img/logo.png" alt="">
-                <p class="brown-btn btn">Contact Us</p>
+                <p class="brown-btn btn" id="contact">Contact Us</p>
+            </div>
+
+            <div class="modal" id="contactList">
+                <div class="modal-header">
+                    <h3>Contact Us</h3>
+                    <h3 class="fa fa-close" id="closeContact"></h3>
+                </div>
+
+                <div class="contact-list">
+                    <div class="person">
+                        <div class="contact-image">
+                            <img src="img/akpet.jpg" alt="">
+                        </div>
+                        <ul class="details">
+                            <li><h4>AKPET, Kohly M. Obaji</h4></li>
+                            <li><a href="tel:+234.803.697.0656">+234 803 697 0656</a></li>
+                            <li><a href="">akpet@sedekdoors.com</a></li>
+                            <li><a href="">Lagos</a></li>
+                        </ul>
+                    </div>
+                    <div class="person">
+                        <div class="contact-image">
+                            <img src="img/daniella.jpg" alt="">
+                        </div>
+                        <ul class="details">
+                            <li><h4>OSIM, Daniella</h4></li>
+                            <li><a href="tel:+234.803.697.0656">+234 xxx xxx xxxx</a></li>
+                            <li><a href="">daniella@sedekdoors.com</a></li>
+                            <li><a href="">Calabar</a></li>
+                        </ul>
+                    </div>
+                    <div class="person">
+                        <div class="contact-image">
+                            <img src="img/osangha.jpg" alt="">
+                        </div>
+                        <ul class="details">
+                            <li><h4>AKPET, Osangha Konye</h4></li>
+                            <li><a href="tel:+234.803.697.0656">+234 xxx xxx xxxx</a></li>
+                            <li><a href="">osangha@sedekdoors.com</a></li>
+                            <li><a href="">Port Harcourt</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
             <div class="headline">
