a lot of work with gallery started on

--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
             <div class="g-img">
                 <img src="img/molded_1.png" alt="">
             </div>
-            <p id="more">View more</p>
-            <div class="img-cont">
+            <p id="more" class="more">View more</p>
+
+            <div class="img-cont" id="more-images">
                 <div class="g-img">
                     <img src="img/molded_8.png" alt="">
                 </div>
@@ -246,7 +247,7 @@
                     <img src="img/double_door.jpeg" alt="">
                 </div>
             </div>
-            <p id="less">View less</p>
+            <p id="less" class="less">View less</p>
         </div>
     </div>
 
