--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
             <div class="g-img">
                 <img src="img/double_door_1.jpeg" alt="">
             </div>
+            <p class="xs-more" id="xs-more">
+            <div class="xs-img-contd" id="xs-more-images>
             <div class="g-img">
                 <img src="img/glass_insert_2.png" alt="">
             </div>
@@ -247,14 +249,16 @@
                     <img src="img/double_door.jpeg" alt="">
                 </div>
             </div>
+            </div>
             <p id="less" class="less">View less</p>
+            <p id="xs-less" class="xs-less>View less</p>
         </div>
     </div>
 
     <!-- GET IN TOUCH -->
     <div class="get-in-touch" id="touch">
         <div class="get-in-touch-info">
-            <div>
+     q       <div>
                 <h2>Get in touch</h2>
                 <p>Leave us a message</p>
             </div>
