--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <img src="img/double_door_1.jpeg" alt="">
             </div>
             <p class="xs-more" id="xs-more">
-            <div class="xs-img-contd" id="xs-more-images>
+            <div class="xs-img-contd" id="xs-more-images">
             <div class="g-img">
                 <img src="img/glass_insert_2.png" alt="">
             </div>
