--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </div>
             
             <p id="less" class="less">View less</p>
-            <p id="xs-less" class="xs-less>View less</p>
+            <p id="xs-less" class="xs-less">View less</p>
         </div>
     </div>
 
